# axon

./: Cargo.toml  README.md
axon-ai/: Cargo.toml
axon-ai/src/: error.rs  lib.rs  social_computing.rs
axon-ai/tests/: social_computing_integration.rs
axon-cli/: Cargo.toml
axon-cli/src/: main.rs
axon-contracts/: Cargo.toml
axon-contracts/src/: auto_renewal.rs  creator_economy.rs  domain_registry.rs  governance.rs  integrated_registry.rs  lib.rs  pricing.rs  quid_axon_registry.rs
axon-contracts/tests/: domain_registry_integration.rs  integration_tests.rs
axon-core/: Cargo.toml
axon-core/src/: content.rs  content_organization.rs  crypto.rs  domain.rs  domain_management.rs  errors.rs  identity.rs  lib.rs  performance_optimization.rs  privacy_infrastructure.rs  types.rs
axon-creator-economy/: Cargo.toml
axon-creator-economy/src/: analytics.rs  anonymous_economy.rs  creator_tools.rs  error.rs  funding.rs  lib.rs  payments.rs  revenue.rs  subscriptions.rs
axon-discovery/: Cargo.toml
axon-discovery/src/: discovery_engine.rs  error.rs  interest_matching.rs  lib.rs  nymcompute_integration.rs  privacy_preserving.rs  recommendations.rs  social_discovery.rs  types.rs
axon-governance/: Cargo.toml
axon-governance/src/: community_council.rs  delegation.rs  error.rs  governance_analytics.rs  lib.rs  proposals.rs  voting.rs
axon-identity/: Cargo.toml
axon-identity/src/: auth_service.rs  identity_manager.rs  lib.rs  quid_integration.rs  verification.rs
axon-media/: Cargo.toml
axon-media/src/: advanced_content.rs  error.rs  interactive.rs  lib.rs  media_analytics.rs  privacy_streaming.rs  processing.rs  recording.rs  streaming.rs  transcoding.rs
axon-personalization/: Cargo.toml
axon-personalization/src/: error.rs  federated_learning.rs  lib.rs  preference_learning.rs  privacy_personalization.rs  recommendation_engine.rs
axon-personalization/tests/: integration_test.rs
axon-search/: Cargo.toml
axon-search/src/: advanced_search_engine.rs  distributed_index.rs  error.rs  lib.rs  privacy_search.rs
axon-search/tests/: integration_test.rs
axon-social/: Cargo.toml
axon-social/src/: advanced_search.rs  analytics.rs  community_moderation.rs  error.rs  feed.rs  interactions.rs  lib.rs  privacy.rs  social_graph.rs
docs/: roadmap.md  whitepaper.md
src/: lib.rs
