[workspace]
members = [
    "axon-core",
    "axon-contracts", 
    "axon-identity",
    "axon-cli"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography
sha3 = "0.10"
blake3 = "1.4"
ring = "0.16"
ed25519-dalek = "1.0"
x25519-dalek = "1.1"

# Async networking
libp2p = "0.53"
futures = "0.3"

# Storage
rocksdb = "0.21"

# Serialization
bincode = "1.3"
postcard = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"