[package]
name = "axon"
version = "0.1.0"
edition = "2021"
authors = ["Axon Development Team"]
description = "Privacy-First Decentralized Social Networking Platform"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "axon-core",
    "axon-contracts", 
    "axon-identity",
    "axon-social",
    "axon-discovery",
    "axon-cli"
]
resolver = "2"

[lib]
name = "axon"
path = "src/lib.rs"

[dependencies]
# Core dependencies - Axon depends on both QuID and Nym
quid-core = { path = "../quid/quid-core" }
nym-core = { path = "../nym/nym-core" }
nym-network = { path = "../nym/nym-network" }

# Axon components
axon-core = { path = "axon-core" }
axon-social = { path = "axon-social" }
axon-identity = { path = "axon-identity" }
axon-contracts = { path = "axon-contracts" }
axon-discovery = { path = "axon-discovery" }
axon-cli = { path = "axon-cli" }

tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography
sha3 = "0.10"
blake3 = "1.4"
ring = "0.16"
ed25519-dalek = "1.0"
x25519-dalek = "1.1"

# Async networking
libp2p = "0.53"
futures = "0.3"

# Storage
rocksdb = "0.21"

# Serialization
bincode = "1.3"
postcard = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"