[package]
name = "axon-ai"
version = "0.1.0"
edition = "2021"
authors = ["Axon Development Team"]
description = "AI-Powered Privacy Features for Axon Social Network"
license = "0BSD"

[dependencies]
# Core dependencies
axon-core = { path = "../axon-core" }
axon-social = { path = "../axon-social" }
axon-search = { path = "../axon-search" }
axon-personalization = { path = "../axon-personalization" }
nym-core = { path = "../../nym/nym-core" }
nym-compute = { path = "../../nym/nym-compute" }
nym-crypto = { path = "../../nym/nym-crypto" }
quid-core = { path = "../../quid/quid-core" }

# Async and networking
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Cryptography
sha3 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Machine learning and AI (simplified)
ndarray = { workspace = true }

# Data structures
dashmap = { workspace = true }
fxhash = { workspace = true }

# Utilities
uuid = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }