[package]
name = "axon-contracts"
version = "0.1.0"
edition = "2021"
authors = ["Axon Team"]
description = "Smart contracts for Axon domain registry and creator economy"

[dependencies]
axon-core = { path = "../axon-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"