[package]
name = "axon-core"
version = "0.1.0"
edition = "2021"
authors = ["Axon Team"]
description = "Core protocol types and traits for Axon decentralized social network"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
bincode = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
rand = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["macros", "rt", "sync"] }
md5 = "0.7"

[dev-dependencies]
tokio = { workspace = true }