[package]
name = "axon-creator-economy"
version = "0.1.0"
edition = "2021"
description = "Privacy-preserving creator economy platform for Axon"
license = "MIT"
repository = "https://github.com/nymverse/axon"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha3 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Nym ecosystem dependencies
nym-crypto = { path = "../../nym/nym-crypto" }
axon-core = { path = "../axon-core" }
axon-identity = { path = "../axon-identity" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
test-utils = []