[package]
name = "axon-discovery"
version = "0.1.0"
edition = "2021"
authors = ["Nymverse Team <dev@nymverse.org>"]
license = "MIT"
description = "Privacy-preserving content discovery engine for Axon social platform"
homepage = "https://nymverse.org"
repository = "https://github.com/nymverse/axon"
keywords = ["discovery", "privacy", "social", "recommendations", "axon"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Local dependencies
axon-core = { path = "../axon-core" }
axon-social = { path = "../axon-social" }
axon-identity = { path = "../axon-identity" }

# NymCompute integration
nym-compute = { path = "../../nym/nym-compute" }

# Cryptography and privacy
ed25519-dalek = "1.0"
sha3 = "0.10"
blake3 = "1.4"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
dashmap = "5.5"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"

# Storage
rocksdb = "0.21"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = ["anonymous-discovery", "privacy-proofs"]
anonymous-discovery = []
privacy-proofs = []
distributed-processing = []