[package]
name = "axon-identity"
version = "0.1.0"
edition = "2021"
authors = ["Axon Team"]
description = "QuID identity integration for Axon protocol"

[dependencies]
axon-core = { path = "../axon-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sha3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"