[package]
name = "axon-media"
version = "0.1.0"
edition = "2021"
authors = ["Axon Development Team"]
description = "Privacy-First Media Streaming and Processing for Axon Social Network"
license = "0BSD"

[dependencies]
# Core dependencies
axon-core = { path = "../axon-core" }
nym-core = { path = "../../nym/nym-core" }
nym-compute = { path = "../../nym/nym-compute" }
nym-crypto = { path = "../../nym/nym-crypto" }
quid-core = { path = "../../quid/quid-core" }

# Async and networking
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Cryptography
sha3 = { workspace = true }
blake3 = { workspace = true }
ring = { workspace = true }

# Media processing (simplified for now)
# ffmpeg-next = "6.0"  # Optional for advanced processing
# webrtc = "0.7"       # Optional for WebRTC
# opus = "0.3"         # Optional for audio
# image = "0.24"       # Optional for image processing

# Streaming protocols (simplified for now)
# flv-rs = "0.3"       # Optional for FLV
# rtmp = "0.5"         # Optional for RTMP  
# webm = "0.1"         # Optional for WebM

# Error handling and logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }