[package]
name = "axon-personalization"
version = "0.1.0"
edition = "2021"
authors = ["Axon Development Team"]
description = "Privacy-preserving personalization engine for Axon social network"
license = "0BSD"
repository = "https://github.com/nymverse/axon"

[dependencies]
# Core Axon dependencies
axon-core = { path = "../axon-core" }
axon-discovery = { path = "../axon-discovery" }
axon-search = { path = "../axon-search" }
nym-core = { path = "../../nym/nym-core" }
nym-crypto = { path = "../../nym/nym-crypto" }
nym-compute = { path = "../../nym/nym-compute" }
quid-core = { path = "../../quid/quid-core" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Machine learning and AI
ndarray = { workspace = true }

# Cryptographic libraries
sha3 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { workspace = true }
curve25519-dalek = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Data structures and algorithms
dashmap = { workspace = true }
fxhash = { workspace = true }

# Time handling
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[features]
default = ["privacy-personalization", "federated-learning"]
privacy-personalization = []
federated-learning = []
differential-privacy-advanced = []
neural-networks = []

