[package]
name = "axon-social"
version = "0.1.0"
edition = "2021"
authors = ["Nymverse Team <dev@nymverse.org>"]
license = "MIT"
description = "Social networking features for Axon privacy-first platform"
homepage = "https://nymverse.org"
repository = "https://github.com/nymverse/axon"
keywords = ["social", "privacy", "decentralized", "networking", "axon"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Local dependencies
axon-core = { path = "../axon-core" }
axon-identity = { path = "../axon-identity" }

# Cryptography
ed25519-dalek = "1.0"
sha3 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = ["privacy-proofs"]
privacy-proofs = []
analytics = []